# cli-music

./: .gitignore  Cargo.toml  README.md
cli-music-hud/: Cargo.toml  build.sh
cli-music-hud/resources/: Info.plist
cli-music-hud/src/: audio.rs  config.rs  event_tap.rs  hud.rs  login_item.rs  main.rs
docs/plans/: 2026-02-27-cli-music-design.md  2026-02-27-cli-music-implementation.md
src/: app.rs  artwork.rs  bridge.rs  library.rs  main.rs  ui.rs
